--- a/Front/ProEventos--App/src/app/app.component.html
+++ b/Front/ProEventos--App/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-eventos></app-eventos>
-<app-palestrantes></app-palestrantes>
-<router-outlet />
+
+<div class="container">
+
+  <app-eventos></app-eventos>
+  <app-palestrantes></app-palestrantes>
+  <router-outlet />
+
+</div>
+
+
