--- a/Front/ProEventos--App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos--App/src/app/eventos/eventos.component.html
@@ -1,9 +1,14 @@
 
 <h1>Eventos</h1>
 
-<div *ngFor="let evento of eventos">
-  <p><b>Tema:</b> {{evento.tema}}</p>
-  <p><b>Local:</b> {{evento.local}}</p>
+<div *ngFor="let evento of evento">
+  <p><b>EventoId: </b>{{evento.eventoId}}</p>
+  <p><b>Local: </b>{{evento.local}}</p>
+  <p><b>Data do Evento: </b>{{evento.dataEvento}}</p>
+  <p><b>Tema: </b>{{evento.tema}}</p>
+  <p><b>Quantidade de Pessoas: </b>{{evento.qtdPessoas}}</p>
+  <p><b>Lote: </b>{{evento.lote}}</p>
+  <p><b>ImagemUrl: </b>{{evento.imagemUrl}}</p>
   <hr>
 </div>
 
