--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -19,7 +19,8 @@
       <th>
         <button type="button" class="btn btn-outline-light btn-sm"
         (click)="alterarImagem()">
-        {{!exibirImagem ? 'Exibir' : 'ocultar'}}
+        <i class="{{!exibirImagem ?'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
+        {{!exibirImagem ? 'exibir' : 'ocultar'}}
         </button>
       </th>
       <th>#</th>
@@ -41,15 +42,20 @@
         [style.margin.px]="margemImagem"
         >
       </td>
-      <td>{{evento.eventoId}}</td>
+      <td>{{evento.id}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.dataEvento | DateFormat}}</td>
       <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote}}</td>
+      <td>{{evento.lotes[0].nome | uppercase}}</td>
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button type="button" class="btn btn-primary btn-sm mr-2">
+        <i class="fa fa-edit"></i>
+          Editar
+        </button>
+        <button type="button" class="btn btn-danger btn-sm">
+        <i class="fa fa-trash"></i>
+          Excluir</button>
       </td>
     </tr>
   </tbody>
