--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -45,7 +45,7 @@
       <td>{{evento.id}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento | DateFormat}}</td>
+      <td>{{evento.dataEvento | DateFormatPipe}}</td>
       <td>{{evento.qtdPessoas}}</td>
       <td>{{evento.lotes[0].nome | uppercase}}</td>
       <td>
@@ -53,7 +53,7 @@
         <i class="fa fa-edit"></i>
           Editar
         </button>
-        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir">
+        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
         <i class="fa fa-trash"></i>
           Excluir</button>
       </td>
@@ -69,4 +69,13 @@
     </tr>
   </tfoot>
 </table>
+
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Tem certeza que deseja deletar este evento?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()" >Sim</button>
+    <button type="button" class="btn btn-primary" (click)="decline()" >Não</button>
+  </div>
+</ng-template>
 
