--- a/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
+++ b/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
@@ -1,1 +1,2 @@
-<app-titulo  [titulo]="'Contatos'"></app-titulo>
+<app-titulo  [titulo]="'Contatos'"
+             [botaoListar]="true"></app-titulo>
