--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,4 +1,5 @@
-<app-titulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'"></app-titulo>
+<app-titulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'"
+                                 [botaoListar]="true" ></app-titulo>
 
 <div class="form-inline">
   <div class="form-group mb-2">
