--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="dashboard">ProEventos</a>
-    <button class="navbar-toggler" (click)="isCollapsed = !isCollapsed" type="button" 
+    <button class="navbar-toggler" (click)="isCollapsed = !isCollapsed" type="button"
       data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="botaoNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -17,24 +17,23 @@
           <a class="nav-link" routerLink="contatos">Contatos</a>
         </li>
       </ul>
-
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown" dropdown container="body">
-          <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdownMenuLink" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Anderson
-          </a>
-          <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="perfil">
-              Perfil
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown" dropdown container="body">
+            <a dropdownToggle class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Anderson
             </a>
-            <div role="separator" class="divider"></div>
-            <a class="dropdown-item" href="#">
-              Sair
-            </a>
-          </div>
-        </li>
-      </ul>
+            <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" routerLink="perfil">
+                Perfil
+              </a>
+              <div role="separator" class="divider"></div>
+              <a class="dropdown-item" href="#">
+                Sair
+              </a>
+            </div>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
