--- a/Front/ProEventos-App/src/app/shared/titulo/titulo.component.html
+++ b/Front/ProEventos-App/src/app/shared/titulo/titulo.component.html
@@ -6,7 +6,7 @@
       <small>{{subtitulo}}</small>
     </div>
   </div>
-  <div class="p-3">
+  <div class="p-3" *ngIf="botaoListar">
     <button class="btn btn-outline-light">
         Listar {{titulo}}
     </button>
