--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -1,26 +1,41 @@
-<app-titulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'"
-                                 [botaoListar]="true" ></app-titulo>
+<app-titulo [titulo]="'Eventos'"
+[iconClass]="'fa fa-calendar-alt'"
+[botaoListar]="true" ></app-titulo>
 
-<div class="form-inline">
-  <div class="form-group mb-2">
-    <label class="mr-2">Filtro: </label>
-    <input
-    type="text"
-    class="form-control mr-2"
-    placeholder="buscar"
-    [(ngModel)]="filtroLista"
-    >
+<div class="card rounded shadow-sm p-3">
+  <div class="d-flex">
+
+    <div>
+      <div class="form-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">Filtro: </div>
+        </div>
+        <input
+        type="text"
+        class="form-control"
+        placeholder="buscar"
+        [(ngModel)]="filtroLista"
+        >
+      </div>
+    </div>
+
+    <div>
+      <a class="d-flex btn btn-outline-primary" href="#">
+        <i class="fa fa-plus-circle my-1"></i>
+        <b class="ml-1 d-none d-sm-block">Novo</b>
+      </a>
+    </div>
+
   </div>
-</div>
-<!--<h3>Filtro: {{filtroLista}}</h3>-->
-<table  class="table table-striped">
-  <thead  class="thead-dark">
-    <tr>
-      <th>
-        <button type="button" class="btn btn-outline-light btn-sm"
-        (click)="alterarImagem()">
-        <i class="{{!exibirImagem ?'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
-        {{!exibirImagem ? 'exibir' : 'ocultar'}}
+  <!--<h3>Filtro: {{filtroLista}}</h3>-->
+  <table  class="table table-striped">
+    <thead  class="thead-dark">
+      <tr>
+        <th>
+          <button type="button" class="btn btn-outline-light btn-sm"
+          (click)="alterarImagem()">
+          <i class="{{!exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
+          {{!exibirImagem ? 'exibir' : 'ocultar'}}
         </button>
       </th>
       <th>#</th>
@@ -36,7 +51,7 @@
     <tr *ngFor="let evento of eventosFiltrados ">
       <td>
         <img [collapse]="!exibirImagem"
-             [isAnimated]="true"
+        [isAnimated]="true"
         src="/assets/{{evento.imagemURL}}"
         [style.width.px]="larguraImagem"
         [style.margin.px]="margemImagem"
@@ -50,26 +65,28 @@
       <td>{{evento.lotes[0].nome | uppercase}}</td>
       <td>
         <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
-        <i class="fa fa-edit"></i>
+          <i class="fa fa-edit"></i>
           Editar
         </button>
         <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
-        <i class="fa fa-trash"></i>
+          <i class="fa fa-trash"></i>
           Excluir</button>
-      </td>
-    </tr>
-  </tbody>
-  <tfoot *ngIf="!eventos.length">
-    <tr>
-      <td colspan="8" class="text-center">
-        <h4>
-          Nenhum Evento encontrado!
-        </h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot *ngIf="!eventos.length">
+      <tr>
+        <td colspan="8" class="text-center">
+          <h4>
+            Nenhum Evento encontrado!
+          </h4>
+        </td>
+      </tr>
+    </tfoot>
+  </table>
+</div>
 
+<!-- {{eventos | json}} -->
 
 <ng-template #template>
   <div class="modal-body text-center">
