--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -25,7 +25,7 @@
 
   </div>
   <!--<h3>Filtro: {{filtroLista}}</h3>-->
-  <table  class="table table-striped">
+  <table  class="table table-striped table-hover">
     <thead  class="thead-dark">
       <tr>
         <th class="d-none d-md-table-cell">
@@ -45,7 +45,7 @@
     </tr>
   </thead>
   <tbody *ngIf="eventos && eventos.length">
-    <tr *ngFor="let evento of eventosFiltrados ">
+    <tr *ngFor="let evento of eventosFiltrados" (click)="detalheEvento(evento.id)" style="cursor: pointer;">
       <td class="d-none d-md-table-cell">
         <img [collapse]="!exibirImagem"
         [isAnimated]="true"
